[package]
name = "tsnp"
version = "0.1.0"
edition = "2021"
authors = ["michael"]
license = "MIT OR Apache-2.0"
description = "Auto-generate ts-native plugin configuration from Rust crates"
repository = "https://github.com/itszzl-sudo/tsnp"
homepage = "https://github.com/itszzl-sudo/tsnp"
documentation = "https://docs.rs/tsnp"
readme = "README.md"
keywords = ["typescript", "ffi", "native", "plugin", "code-generation"]
categories = ["command-line-utilities", "development-tools::ffi"]

[lib]
name = "tsnp"
path = "src/lib.rs"

[[bin]]
name = "cargo-tsnp"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "parsing"] }
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
urlencoding = "2.1"
